Fixed overflow issues.

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,19 +6,19 @@
 }
 
 .header-first {
-    background-color: rgba(#ffb367, 0.5);
+    background-color: rgba(#ffb367, 0.7);
     padding: 30px;
     border-radius: 10px;
 }
 
 .header-second {
-    background-color: rgba(#ffe277, 0.5);
+    background-color: rgba(#ffe277, 0.7);
     padding: 30px;
     border-radius: 10px;
 }
 
 .header-third {
-    background-color: rgba(#ffe2bc, 0.5);
+    background-color: rgba(#ffe2bc, 0.7);
     padding: 30px;
     border-radius: 10px;
 }
